# cinderbox

./: .gitmodules  CMakeLists.txt  README.md  template.cpp
include/cinderbox/: cinderbox.hh  gradient.hh  includes.hh  slider.hh
src/: gradient.cpp
